--- a/Tugas_portofolio/styles.css
+++ b/Tugas_portofolio/styles.css
@@ -188,7 +188,7 @@ align-items: center;
   
 }
 /* buat style  seervice*/
-#services{
+#skills{
     background-color: #D9DDDC;
     padding: var(--sectionPadding);
 
